Fix sponsors bar misalignment

--- a/web/_includes/less/objects/_gallery.less
+++ b/web/_includes/less/objects/_gallery.less
@@ -87,6 +87,7 @@
 
   .gallery__item {
     width: 26.07033%;
+    min-height: 60px;
   }
 
   //  Reset left padding for right items
